tests/paczka1/fuzzy1/98076954.err
Error in line 21: Kg6 A846 47,9
Error in line 29: A846 Ab92 123,5
Error in line 26: 0QkFmkCGLu S239 80,2
Error in line 30: 0QkFmkCGLu S916 73,3
Error in line 37: Kg6 S916 68,8
Error in line 40: eNBOHZra5c S239 -1,9
